<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magistre</string>
    <string name="action_settings">Reset</string>
    <string name="action_reload">Reload</string>
    <string name="action_clear">Clear cache</string>
    <string name="action_turbo">Turbo Mode</string>
    <string name="action_about">About</string>
    <string name="action_color">Color</string>
    <string name="action_advanced">Advanced</string>
    <string name="string_welcome">Welcome!</string>
    <string name="string_tostart">So start we need the link of Magister for your school</string>
    <string name="string_ok">Ok</string>
    <string name="string_exampleSchool">Segbroek</string>
    <string name="string_cons_turbo">Cons of Turbo Mode;</string>
    <string name="string_cons_roosterwijzegingen">"Schedule changes won\'t be displayed"</string>
    <string name="string_pros_turbo">Pros of Turbo Mode;</string>
    <string name="string_pros_lessdata">Uses less data</string>
    <string name="string_pros_faster">Faster</string>
    <string name="string_desc_turbo">In this menu you can enable or disable turbo mode</string>
    <string name="string_save">Save</string>
    <string name="color_purple">Purple</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_lightblue">Light Blue</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_greyblue">Grey blue</string>
    <string name="color_red">Red</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="string_adv_sub">You can change the url in this menu if something doesnt work. like ELO links to the homepage</string>
    <string name="string_grades">Grades</string>
    <string name="string_presence">Presence</string>
    <string name="string_messages">Messages</string>
    <string name="string_elo">ELO</string>
    <string name="open_page">You need to open an page for this to work</string>
</resources>
