<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CountryActivity" >
    <item android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:orderInCategory="1"/>
    <item android:id="@+id/action_turbo"
        android:title="@string/action_turbo"
        android:orderInCategory="2"/>
    <item android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="3"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="4"/>
    <item android:id="@+id/action_color"
        android:title="@string/action_color"
        android:orderInCategory="5"/>
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="6"/>
    <item android:id="@+id/action_advanced"
        android:title="@string/action_advanced"
        android:orderInCategory="7"/>

</menu>
