<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="106dp"
        android:layout_height="36dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_welcome"
        android:id="@+id/textView"
        android:autoText="false"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string_tostart"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:typeface="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:id="@+id/schoolName"
        android:hint="@string/string_exampleSchool"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff000000"
        android:singleLine="true"
        android:inputType="text|textUri"
        android:enabled="true"
        android:typeface="normal"
        android:editable="true">
        </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=".magister.net"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView17"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ok"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="welcomeFinished" />

</LinearLayout>